--- a/capstone_script.ipynb
+++ b/capstone_script.ipynb
@@ -10153,29 +10153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16"
+       "13"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# stop at id 85, continue at id 86\n",
-    "new_li = li[606:622]\n",
+    "new_li = li[642:655]\n",
     "len(new_li)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -10201,27 +10201,12 @@
       "Inserting...\n",
       "Insert 7 item\n",
       "Inserting...\n",
-      "Insert 8 item\n",
-      "Inserting...\n",
-      "Insert 9 item\n",
-      "Inserting...\n",
-      "Insert 10 item\n",
-      "Inserting...\n",
-      "Insert 11 item\n",
-      "Inserting...\n",
-      "Insert 12 item\n",
-      "Inserting...\n",
-      "Insert 13 item\n",
-      "Inserting...\n",
-      "Insert 14 item\n",
-      "Inserting...\n",
-      "Insert 15 item\n",
-      "Inserting...\n"
+      "Insert 8 item\n"
      ]
     }
    ],
    "source": [
-    "res.split_chunks(new_li, restaurant, 16)"
+    "res.split_chunks(new_li, restaurant, 13)"
    ]
   },
   {
