--- a/user_script.ipynb
+++ b/user_script.ipynb
@@ -104,58 +104,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=0\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=20\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=40\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=60\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=80\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=100\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=120\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=140\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=160\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=180\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=200\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=220\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=240\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=260\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=280\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=300\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=320\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=340\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=360\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=380\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=400\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=420\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=440\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=460\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=480\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=500\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=520\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=540\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=560\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=580\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=600\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=620\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=640\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=660\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=680\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=700\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=720\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=740\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=760\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=780\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=800\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=820\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=840\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=860\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=880\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=900\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=920\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=940\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=960\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=980\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=1000\n",
-      "https://www.yelp.com/biz/leopolds-san-francisco-2?osq=Restaurants&start=1020\n"
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=0\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=20\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=40\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=60\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=80\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=100\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=120\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=140\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=160\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=180\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=200\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=220\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=240\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=260\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=280\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=300\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=320\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=340\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=360\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=380\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=400\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=420\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=440\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=460\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=480\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=500\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=520\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=540\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=560\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=580\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=600\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=620\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=640\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=660\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=680\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=700\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=720\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=740\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=760\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=780\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=800\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=820\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=840\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=860\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=880\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=900\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=920\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=940\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=960\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=980\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1000\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1020\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1040\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1060\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1080\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1100\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1120\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1140\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1160\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1180\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1200\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1220\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1240\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1260\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1280\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1300\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1320\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1340\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1360\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1380\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1400\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1420\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1440\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1460\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1480\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1500\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1520\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1540\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1560\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1580\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1600\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1620\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1640\n",
+      "https://www.yelp.com/biz/nicks-crispy-tacos-san-francisco-2?osq=Restaurants&start=1660\n"
      ]
     }
    ],
@@ -166,7 +198,7 @@
     "userlist = []\n",
     "for idx, row in enumerate(restaurants.find()):\n",
     "    num = idx + 1\n",
-    "    if num >= 101 and num <= 104:\n",
+    "    if num == 103:\n",
     "        r = requests.get(row['url'], headers={'user-agent': 'Mozilla/5.0'})\n",
     "        soup = BeautifulSoup(r.content, \"html\")\n",
     "        pagination_div = soup.find(\"div\", {\"class\": \"pagination__373c0__1NjN5\"})\n",
