eda on reviewers

--- a/capstone_script.ipynb
+++ b/capstone_script.ipynb
@@ -10463,23 +10463,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35"
+       "28"
       ]
      },
-     "execution_count": 343,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# stop at id 85, continue at id 86\n",
-    "new_li = li[715: 750]\n",
+    "new_li = li[782:810]\n",
     "len(new_li)"
    ]
   },
@@ -10527,12 +10527,20 @@
       "Inserting...\n",
       "Insert 15 item\n",
       "Inserting...\n",
-      "Insert 16 item\n"
+      "Insert 16 item\n",
+      "Inserting...\n",
+      "Insert 17 item\n",
+      "Inserting...\n",
+      "Insert 18 item\n",
+      "Inserting...\n",
+      "Insert 19 item\n",
+      "Inserting...\n",
+      "Insert 20 item\n"
      ]
     }
    ],
    "source": [
-    "res.split_chunks(new_li, restaurant, 35)"
+    "res.split_chunks(new_li, restaurant, 28)"
    ]
   },
   {
