update html file

--- a/recommendation_script.ipynb
+++ b/recommendation_script.ipynb
@@ -2,27 +2,72 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a Restaurant:Petit Crenn\n",
       "                          \n",
       "Recommender 1 Result: \n",
       "---------------------------\n",
-      "Restaurant: Petit Crenn\n",
-      "['Atelier Crenn', 'Cocotte', 'Cafe Jacqueline', 'Quince', 'La Folie', 'Bouche', 'Gary Danko', 'Cafe Claude', 'Nico', 'Isa Restaurant', 'Zuni Café', 'Piperade', 'OzaOza', 'Birdsong', 'Californios', 'Eight Tables by George Chen', 'Lazy Bear', 'Spruce', 'Hina Yakitori', 'Mister Jiu’s']\n",
+      "Restaurant: Noosh\n",
+      "                               title  \\\n",
+      "29                Kokkari Estiatorio   \n",
+      "43                             Troya   \n",
+      "53                            Souvla   \n",
+      "97                            Barcha   \n",
+      "190                    Oren’s Hummus   \n",
+      "252                      Saffron 685   \n",
+      "609                     Dunya Bistro   \n",
+      "618               SAJJ Mediterranean   \n",
+      "871            Zaytoon Mediterranean   \n",
+      "956  Mangal Mediterranean Restaurant   \n",
+      "\n",
+      "                                             image_url  \\\n",
+      "29   https://s3-media0.fl.yelpcdn.com/bphoto/7StMTf...   \n",
+      "43   https://s3-media0.fl.yelpcdn.com/bphoto/MLHVzA...   \n",
+      "53   https://s3-media0.fl.yelpcdn.com/bphoto/C5rrts...   \n",
+      "97   https://s3-media0.fl.yelpcdn.com/bphoto/olP9gX...   \n",
+      "190  https://s3-media0.fl.yelpcdn.com/bphoto/Vk621y...   \n",
+      "252  https://s3-media0.fl.yelpcdn.com/bphoto/ON-4HJ...   \n",
+      "609  https://s3-media0.fl.yelpcdn.com/bphoto/Kr918C...   \n",
+      "618  https://s3-media0.fl.yelpcdn.com/bphoto/lzDp2t...   \n",
+      "871  https://s3-media0.fl.yelpcdn.com/bphoto/iCLmMi...   \n",
+      "956  https://s3-media0.fl.yelpcdn.com/bphoto/s8p3cm...   \n",
+      "\n",
+      "                                                   url  price  stars  \\\n",
+      "29   https://www.yelp.com/biz/kokkari-estiatorio-sa...    3.0    4.5   \n",
+      "43   https://www.yelp.com/biz/troya-san-francisco-3...    2.0    4.0   \n",
+      "53   https://www.yelp.com/biz/souvla-san-francisco?...    2.0    4.0   \n",
+      "97   https://www.yelp.com/biz/barcha-san-francisco?...    2.0    4.0   \n",
+      "190  https://www.yelp.com/biz/orens-hummus-san-fran...    2.0    4.0   \n",
+      "252  https://www.yelp.com/biz/saffron-685-san-franc...    2.0    4.0   \n",
+      "609  https://www.yelp.com/biz/dunya-bistro-san-fran...    2.0    4.0   \n",
+      "618  https://www.yelp.com/biz/sajj-mediterranean-sa...    2.0    4.0   \n",
+      "871  https://www.yelp.com/biz/zaytoon-mediterranean...    2.0    4.0   \n",
+      "956  https://www.yelp.com/biz/mangal-mediterranean-...    2.0    4.5   \n",
+      "\n",
+      "                              cuisines  \n",
+      "29                Greek, Mediterranean  \n",
+      "43              Mediterranean, Turkish  \n",
+      "53                Greek, Mediterranean  \n",
+      "97   Mediterranean, Tapas/Small Plates  \n",
+      "190      Mediterranean, Middle Eastern  \n",
+      "252             Mediterranean, Turkish  \n",
+      "609           Mediterranean, Wine Bars  \n",
+      "618                      Mediterranean  \n",
+      "871                      Mediterranean  \n",
+      "956                      Mediterranean  \n",
       "                          \n",
       "Recommender 2 Result: \n",
       "---------------------------\n",
-      "['Atelier Crenn', 'Farallon', 'Coi', 'Foreign Cinema', 'L’Ardoise Bistro', 'Quince', '25 Lusk', 'Gary Danko', 'Rich Table', 'Bouche', 'Benu', 'Prospect', 'Zazie', 'La Folie', 'Outerlands', 'The House', 'Marlowe', 'Spruce', 'Waterbar', 'Boulevard']\n",
+      "['The Progress', 'Beit Rima', 'Mourad Restaurant', 'Liholiho Yacht Club', 'a Mano', 'Capo’s by Tony Gemignani', 'Palette Tea House', 'Flour + Water', 'Akiko’s Restaurant', 'Montesacro Pinseria SF']\n",
       "                          \n",
       "Recommender 3 Result: \n",
       "---------------------------\n",
-      "['K-Elements BBQ', 'Kogi Gogi BBQ', 'Dumpling House', 'Fiery Hot Pot Buffet', 'Wasabi Bistro', 'Wildseed', 'HRD', 'Alamo Square Seafood Grill', 'Shabu Club', 'Sunset Shabu', 'Panchita’s Restaurant', 'Peaches Patties Jamaican Kitchen', 'Glaze Teriyaki', 'Supreme Crab', 'Old Jerusalem Restaurant', 'Saucy Asian', 'KKOCHI Grilled Korean BBQ', 'Dokkaebier', 'Izakaya Sozai', 'Nara']\n"
+      "['Hong Kong Clay Pot Restaurant', 'Pharaohs Mediterranean Sandwiches', 'Los Kuyas', 'The Slanted Door', 'Sweet Lime Thai Cuisine', 'Sumac', 'Izakaya Yoki', 'Indian Paradox', 'Mochica', 'Sichuan Home']\n"
      ]
     }
    ],
