--- a/recommendation_script.ipynb
+++ b/recommendation_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -49,17 +49,17 @@
       "871  https://www.yelp.com/biz/zaytoon-mediterranean...    2.0    4.0   \n",
       "956  https://www.yelp.com/biz/mangal-mediterranean-...    2.0    4.5   \n",
       "\n",
-      "                              cuisines  \n",
-      "29                Greek, Mediterranean  \n",
-      "43              Mediterranean, Turkish  \n",
-      "53                Greek, Mediterranean  \n",
-      "97   Mediterranean, Tapas/Small Plates  \n",
-      "190      Mediterranean, Middle Eastern  \n",
-      "252             Mediterranean, Turkish  \n",
-      "609           Mediterranean, Wine Bars  \n",
-      "618                      Mediterranean  \n",
-      "871                      Mediterranean  \n",
-      "956                      Mediterranean  \n",
+      "                              cuisines        neighborhood  \n",
+      "29                Greek, Mediterranean  Financial District  \n",
+      "43              Mediterranean, Turkish     Pacific Heights  \n",
+      "53                Greek, Mediterranean        Hayes Valley  \n",
+      "97   Mediterranean, Tapas/Small Plates  Financial District  \n",
+      "190      Mediterranean, Middle Eastern  Financial District  \n",
+      "252             Mediterranean, Turkish         Mission Bay  \n",
+      "609           Mediterranean, Wine Bars            Nob Hill  \n",
+      "618                      Mediterranean         South Beach  \n",
+      "871                      Mediterranean                NoPa  \n",
+      "956                      Mediterranean      Lower Nob Hill  \n",
       "                          \n",
       "Recommender 2 Result: \n",
       "---------------------------\n",
