--- a/recommendation_script.ipynb
+++ b/recommendation_script.ipynb
@@ -77,10 +77,398 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>userid</th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>review</th>\n",
+       "      <th>date</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>Useful</th>\n",
+       "      <th>Funny</th>\n",
+       "      <th>Cool</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>HhviuVbs2O9HicrR8J53ug</td>\n",
+       "      <td>5e4da0fa3296483cf9246cdd</td>\n",
+       "      <td>this place is the best!!No matter which item I...</td>\n",
+       "      <td>2/4/2020</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0nRiYn9sxe48jsJigPLYoA</td>\n",
+       "      <td>5e4da0fa3296483cf9246cdd</td>\n",
+       "      <td>In town for a brief visit, this was the closes...</td>\n",
+       "      <td>12/24/2019</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>wN_4sCk1dyzWvA9snDP-BA</td>\n",
+       "      <td>5e4da0fa3296483cf9246cdd</td>\n",
+       "      <td>Second time here.  Atmosphere was great to sta...</td>\n",
+       "      <td>12/21/2019</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>MUwPT6c_4bh6aMmyo_JTog</td>\n",
+       "      <td>5e4da0fa3296483cf9246cdd</td>\n",
+       "      <td>Came here to meet an old friend and had a very...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>HCTZ0HdNMn4WuyDkxshCDg</td>\n",
+       "      <td>5e4da0fa3296483cf9246cdd</td>\n",
+       "      <td>Came here for a late lunch/early dinner on our...</td>\n",
+       "      <td>2/17/2020</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>773792</td>\n",
+       "      <td>773647</td>\n",
+       "      <td>eTRi_f87l8qSPFextMc7nA</td>\n",
+       "      <td>5e55bbc53296483cf92470ad</td>\n",
+       "      <td>I was visiting from Seattle and this was a gre...</td>\n",
+       "      <td>11/27/2011</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>773793</td>\n",
+       "      <td>773648</td>\n",
+       "      <td>amAsp2VAt7bg-foYAL3qlw</td>\n",
+       "      <td>5e55bbc53296483cf92470ad</td>\n",
+       "      <td>About a dozen of us kind of spontaneously deci...</td>\n",
+       "      <td>12/5/2011</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>773794</td>\n",
+       "      <td>773649</td>\n",
+       "      <td>JIexYpPMsorzTdF_CUk-eg</td>\n",
+       "      <td>5e55bbc53296483cf92470ad</td>\n",
+       "      <td>My wife and I heard all the GREAT raves recent...</td>\n",
+       "      <td>1/21/2012</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>773795</td>\n",
+       "      <td>773650</td>\n",
+       "      <td>P-NKOxoJqr9j9Pq2ipXp7w</td>\n",
+       "      <td>5e55bbc53296483cf92470ad</td>\n",
+       "      <td>Clean, classy, pleasant surroundings, very war...</td>\n",
+       "      <td>2/9/2012</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>773796</td>\n",
+       "      <td>773651</td>\n",
+       "      <td>z7fJY6_Mxg0t-HaXBpL8IQ</td>\n",
+       "      <td>5e55bbc53296483cf92470ad</td>\n",
+       "      <td>A very welcome addition to the area. Great foo...</td>\n",
+       "      <td>11/21/2011</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>773797 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0                  userid             restaurant_id  \\\n",
+       "0               0  HhviuVbs2O9HicrR8J53ug  5e4da0fa3296483cf9246cdd   \n",
+       "1               1  0nRiYn9sxe48jsJigPLYoA  5e4da0fa3296483cf9246cdd   \n",
+       "2               2  wN_4sCk1dyzWvA9snDP-BA  5e4da0fa3296483cf9246cdd   \n",
+       "3               3  MUwPT6c_4bh6aMmyo_JTog  5e4da0fa3296483cf9246cdd   \n",
+       "4               4  HCTZ0HdNMn4WuyDkxshCDg  5e4da0fa3296483cf9246cdd   \n",
+       "...           ...                     ...                       ...   \n",
+       "773792     773647  eTRi_f87l8qSPFextMc7nA  5e55bbc53296483cf92470ad   \n",
+       "773793     773648  amAsp2VAt7bg-foYAL3qlw  5e55bbc53296483cf92470ad   \n",
+       "773794     773649  JIexYpPMsorzTdF_CUk-eg  5e55bbc53296483cf92470ad   \n",
+       "773795     773650  P-NKOxoJqr9j9Pq2ipXp7w  5e55bbc53296483cf92470ad   \n",
+       "773796     773651  z7fJY6_Mxg0t-HaXBpL8IQ  5e55bbc53296483cf92470ad   \n",
+       "\n",
+       "                                                   review        date  stars  \\\n",
+       "0       this place is the best!!No matter which item I...    2/4/2020    5.0   \n",
+       "1       In town for a brief visit, this was the closes...  12/24/2019    3.0   \n",
+       "2       Second time here.  Atmosphere was great to sta...  12/21/2019    2.0   \n",
+       "3       Came here to meet an old friend and had a very...         NaN    2.0   \n",
+       "4       Came here for a late lunch/early dinner on our...   2/17/2020    5.0   \n",
+       "...                                                   ...         ...    ...   \n",
+       "773792  I was visiting from Seattle and this was a gre...  11/27/2011    4.0   \n",
+       "773793  About a dozen of us kind of spontaneously deci...   12/5/2011    5.0   \n",
+       "773794  My wife and I heard all the GREAT raves recent...   1/21/2012    5.0   \n",
+       "773795  Clean, classy, pleasant surroundings, very war...    2/9/2012    4.0   \n",
+       "773796  A very welcome addition to the area. Great foo...  11/21/2011    5.0   \n",
+       "\n",
+       "        Useful  Funny  Cool  \n",
+       "0          0.0    0.0   1.0  \n",
+       "1          0.0    0.0   0.0  \n",
+       "2          0.0    0.0   0.0  \n",
+       "3          2.0    2.0   2.0  \n",
+       "4          0.0    0.0   1.0  \n",
+       "...        ...    ...   ...  \n",
+       "773792     2.0    0.0   2.0  \n",
+       "773793     2.0    0.0   1.0  \n",
+       "773794     1.0    0.0   1.0  \n",
+       "773795     0.0    0.0   1.0  \n",
+       "773796     1.0    0.0   0.0  \n",
+       "\n",
+       "[773797 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "cols = ['userid']\n",
+    "\n",
+    "reviews_df = pd.read_csv('data/reviews.csv', encoding='utf-8', engine='python')\n",
+    "reviews_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import csv\n",
+    "with open(r'data/reviews.csv', 'rb') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    linenumber = 1\n",
+    "    try:\n",
+    "        for row in reader:\n",
+    "            linenumber += 1\n",
+    "    except Exception as e:\n",
+    "        print(linenumber)\n",
+    "#         print ((\"Error line %d: %s %s\" % (linenumber, str(type(e)), e.message)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>userid</th>\n",
+       "      <th>restaurant_id</th>\n",
+       "      <th>review</th>\n",
+       "      <th>date</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>Useful</th>\n",
+       "      <th>Funny</th>\n",
+       "      <th>Cool</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>npartitions=9</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>int64</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>object</td>\n",
+       "      <td>float64</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>\n",
+       "<div>Dask Name: from-delayed, 27 tasks</div>"
+      ],
+      "text/plain": [
+       "Dask DataFrame Structure:\n",
+       "              Unnamed: 0  userid restaurant_id  review    date    stars Useful  Funny   Cool\n",
+       "npartitions=9                                                                               \n",
+       "                   int64  object        object  object  object  float64  int64  int64  int64\n",
+       "                     ...     ...           ...     ...     ...      ...    ...    ...    ...\n",
+       "...                  ...     ...           ...     ...     ...      ...    ...    ...    ...\n",
+       "                     ...     ...           ...     ...     ...      ...    ...    ...    ...\n",
+       "                     ...     ...           ...     ...     ...      ...    ...    ...    ...\n",
+       "Dask Name: from-delayed, 27 tasks"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reviews_df"
+   ]
   },
   {
    "cell_type": "code",
